# PlatinumMedia

./: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
platinum/src/main/cpp/: CMakeLists.txt  CallbackTypes.h  DLNABridge.cpp  DLNAServer.cpp  DLNAServer.h  MediaRenderer.cpp  MediaRenderer.h
platinum/src/main/java/com/plutinosoft/platinum/: CallbackTypes.java  DLNABridge.java
